# aoc2025

./: .gitignore  .gitmodules  main.py  pyproject.toml
aoc2025/days/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
