[project]
name = "aoc2025"
version = "0.1.0"
description = "Solutions to Advent of Code 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pyqt6>=6.10.1",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
]
